# nosl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-test-action.yml
contrib/: CMakeLists.txt
src/: CMakeLists.txt  ast.c  ast.h  builtins.c  builtins.h  builtins.osl  builtins_stubs.c  check.c  check.h  env.c  env.h  file_cache.c  file_cache.h  lexer.c  lexer.h  main.c  parse.c  parse.h  preamble.c  preamble.h  preprocessor.c  preprocessor.h  token.c  token.h  type.c  type.h  type_table.c  type_table.h
test/: CMakeLists.txt
test/frontend/fail/: ambiguous_call.osl  assign_value.osl  bad_binary_operator.osl  bad_unary_operator.osl  function_as_value.osl  function_redefinition.osl  incomplete_coercion.osl  increment_string.osl  invalid_break.osl  invalid_builtin.osl  invalid_call.osl  invalid_casts.osl  invalid_constructors.osl  invalid_continue.osl  invalid_ellipsis.osl  invalid_shader.osl  missing_default_value.osl  missing_function_body.osl  missing_initializer.osl  missing_return_value.osl  negative_array_size.osl  no_viable_candidate.osl  non_indexable_expression.osl  operator_struct.osl  overload_variable.osl  overloaded_identifier.osl  primitive_operator.osl  shader_redefinition.osl  shadow_symbol.osl  struct_as_value.osl  too_many_fields.osl  trailing_comma.osl  unknown_array_size.osl  unknown_field.osl  unknown_function.osl  unknown_identifiers.osl  unsized_array.osl  unterminated_comment.osl  variable_redefinition.osl  void_variable.osl
test/frontend/pass/: arrays.osl  attributes.osl  builtin_operators.osl  color_array.osl  comments.osl  components.osl  conditions.osl  constructors.osl  explicit_casts.osl  function_overloads.osl  functions.osl  implicit_casts.osl  index_expression.osl  loops.osl  nested_functions.osl  no_eol.osl  overloaded_operators.osl  strings.osl  struct_fields.osl  ternary_operator.osl  types.osl
test/preprocessor/fail/: bad_concat_operator.osl  bad_macro_ellipsis.osl  bad_va_args.osl  define_defined.osl  div_by_zero.osl  error.osl  extra_tokens.osl  invalid_concat.osl  invalid_condition.osl  invalid_directive.osl  invalid_stringify.osl  line.osl  macro_redefinition.osl  missing_include.osl  pragma.osl  too_many_args.osl  undef.osl  unterminated_if_if_0.osl  unterminated_include.osl  unterminated_macro_args.osl  warning.osl
test/preprocessor/pass/: concat.osl  conditions.osl  define.osl  empty_va_args.osl  if_defined.osl  if_elif_else.osl  ifdef_ifndef_elifdef_elifndef.osl  ignore_va_args.osl  include.osl  line.osl  pragma_once.osl  stringify.osl  undef.osl  variadic_macros.osl  warning.osl
test/preprocessor/pass/include/: include_once.inc  test2.inc
